--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "chat-strong",
-  "version": "0.0.0",
+  "name": "chat-5",
+  "version": "0.0.1",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
