--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "typeRoots": [
       "node_modules/@types"
     ],
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "lib": [
       "es2017",
       "dom"
