--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
     "lib": [
       "es2017",
       "dom"
-    ]
+    ],
+    "baseUrl": "./src",
+    "paths": {
+      "shared/*": ["app/shared/*"]
+    }
   }
 }
