--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config ./proxy.json",
+    "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
+    "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -12,43 +14,56 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.1.2",
-    "@angular/cdk": "^5.0.2",
-    "@angular/common": "^5.1.2",
-    "@angular/compiler": "^5.1.2",
-    "@angular/core": "^5.1.2",
-    "@angular/forms": "^5.1.2",
-    "@angular/http": "^5.1.2",
-    "@angular/material": "^5.0.2",
-    "@angular/platform-browser": "^5.1.2",
-    "@angular/platform-browser-dynamic": "^5.1.2",
-    "@angular/router": "^5.1.2",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
+    "@angular/animations": "^5.2.0",
+    "@angular/cdk": "^5.0.4",
+    "@angular/common": "^5.2.0",
+    "@angular/compiler": "^5.2.0",
+    "@angular/core": "^5.2.0",
+    "@angular/forms": "^5.2.0",
+    "@angular/http": "^5.2.0",
+    "@angular/material": "^5.0.4",
+    "@angular/platform-browser": "^5.2.0",
+    "@angular/platform-browser-dynamic": "^5.2.0",
+    "@angular/router": "^5.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.9",
     "angular-4-data-table": "^0.3.0",
-    "angularfire2": "^5.0.0-rc.5-next",
-    "bootstrap": "^4.0.0-beta.2",
+    "argon2": "^0.16.1",
+    "argon2-ffi": "^1.0.1",
+    "autoprefixer": "^7.2.4",
+    "body-parser": "^1.17.2",
+    "bootstrap": "4.0.0-beta.2",
+    "command-line-args": "^4.0.6",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
-    "firebase": "4.8.0",
+    "express-http-proxy": "^1.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
+    "http-server": "^0.10.0",
+    "jsonwebtoken": "^7.4.2",
+    "moment": "^2.18.1",
     "ng2-validation": "^4.2.0",
+    "nodemon": "^1.11.0",
+    "password-validator": "^4.0.0",
     "rxjs": "^5.5.6",
-    "zone.js": "^0.8.14"
+    "ws": "^3.3.3",
+    "zone.js": "^0.8.20"
   },
   "devDependencies": {
     "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.1.2",
-    "@angular/language-service": "^5.1.2",
+    "@angular/compiler-cli": "^5.2.0",
+    "@angular/language-service": "^5.2.0",
+    "@types/express": "^4.0.36",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^6.0.95",
+    "@types/node": "^6.0.96",
+    "@types/ws": "^3.2.1",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.3.1",
+    "karma-coverage-istanbul-reporter": "^1.3.3",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
