--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "ng2-validation": "^4.2.0",
     "nodemon": "^1.11.0",
     "password-validator": "^4.0.0",
+    "redis": "^2.8.0",
     "rxjs": "^5.5.6",
     "ws": "^3.3.3",
     "zone.js": "^0.8.20"
@@ -56,6 +57,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^6.0.96",
+    "@types/redis": "^2.8.4",
     "@types/ws": "^3.2.1",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
