--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jsonwebtoken": "^7.4.2",
     "moment": "^2.18.1",
     "ng2-validation": "^4.2.0",
+    "ng5-data-table": "file:../../../Documents/Training-GreenLanternOnly/ng5-data-table-lib/ng5-data-table-0.1.3.tgz",
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
