--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,16 +7,11 @@
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "target": "es6",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
+    "target": "es5",
+    "typeRoots": ["node_modules/@types"],
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "lib": [
-      "es2017",
-      "dom"
-    ],
+    "lib": ["es2017", "dom"],
     "baseUrl": "./src",
     "paths": {
       "shared/*": ["app/shared/*"]
