Adds enhancements to app server

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "ng": "ng",
     "start": "ng serve --proxy-config ./proxy.json",
     "start-redisdb": "redis-server ./server/database/redis.conf",
-    "pre-load-redisdb": "ts-node ./server/database/pre-load-data.ts",
+    "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
+    "pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
+    "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
+    "start-redis-cli": "redis-cli -p 6379",
     "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
     "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
@@ -31,6 +34,7 @@
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
+    "bldg25-chat": "file:../bldg25-chat-lib/bldg25-chat-0.2.2.tgz",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
@@ -42,7 +46,6 @@
     "jsonwebtoken": "^7.4.2",
     "moment": "^2.18.1",
     "ng2-validation": "^4.2.0",
-    "ng5-data-table": "file:../../../Documents/Training-GreenLanternOnly/ng5-data-table-lib/ng5-data-table-0.2.1.tgz",
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^5.5.6",
@@ -61,6 +64,7 @@
     "@types/redis": "^2.8.5",
     "@types/ws": "^3.2.1",
     "codelyzer": "^4.1.0",
+    "concurrently": "^3.5.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
