--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
     "start-redis-cli": "redis-cli -p 6379",
     "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
-    "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
+    "start-chat-server":
+      "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
+    "server":
+      "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
