--- a/package.json
+++ b/package.json
@@ -11,10 +11,8 @@
     "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
     "start-redis-cli": "redis-cli -p 6379",
     "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
-    "start-chat-server":
-      "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
-    "server":
-      "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
+    "start-chat-server": "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
+    "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -37,7 +35,7 @@
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:../bldg25-chat-lib/bldg25-chat-0.2.2.tgz",
+    "bldg25-chat": "file:../bldg25-chat-lib/bldg25-chat-0.2.5.tgz",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
