--- a/package.json
+++ b/package.json
@@ -20,22 +20,22 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.5",
-    "@angular/cdk": "^5.2.1",
-    "@angular/common": "^5.2.5",
-    "@angular/compiler": "^5.2.5",
-    "@angular/core": "^5.2.5",
-    "@angular/forms": "^5.2.5",
-    "@angular/http": "^5.2.5",
-    "@angular/material": "^5.2.1",
-    "@angular/platform-browser": "^5.2.5",
-    "@angular/platform-browser-dynamic": "^5.2.5",
-    "@angular/router": "^5.2.5",
+    "@angular/animations": "6.0.1",
+    "@angular/cdk": "^6.0.1",
+    "@angular/common": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/core": "6.0.1",
+    "@angular/forms": "6.0.1",
+    "@angular/http": "6.0.1",
+    "@angular/material": "^6.0.1",
+    "@angular/platform-browser": "6.0.1",
+    "@angular/platform-browser-dynamic": "6.0.1",
+    "@angular/router": "6.0.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:../bldg25-chat-lib/bldg25-chat-0.3.0.tgz",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-0.0.1.tgz",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
@@ -49,18 +49,20 @@
     "ng2-validation": "^4.2.0",
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
-    "rxjs": "^5.5.6",
-    "typescript": "~2.4.2",
+    "rxjs": "^6.1.0",
     "ws": "^3.3.3",
-    "zone.js": "^0.8.20"
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.5",
-    "@angular/compiler-cli": "^5.2.5",
-    "@angular/language-service": "^5.2.5",
+    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular/cli": "6.0.1",
+    "@angular/compiler-cli": "6.0.1",
+    "@angular/language-service": "6.0.1",
+    "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
+    "@types/jsonwebtoken": "^7.2.7",
     "@types/node": "^6.0.101",
     "@types/redis": "^2.8.5",
     "@types/ws": "^3.2.1",
@@ -77,6 +79,7 @@
     "nodemon": "^1.15.1",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0"
+    "tslint": "~5.7.0",
+    "typescript": "2.7.2"
   }
 }
