--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,8 @@
     "baseUrl": "./src",
     "paths": {
       "shared/*": ["app/shared/*"]
-    }
+    },
+    "strictPropertyInitialization": false,
+    "strict": true
   }
 }
