--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-0.0.3.tgz",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-1.0.0.tgz",
+    "bldg25-chat-server": "file:../bldg25-chat-server/bldg25-chat-server-1.0.1.tgz",
     "body-parser": "^1.17.2",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
@@ -50,7 +51,7 @@
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^6.1.0",
-    "ws": "^3.3.3",
+    "ws": "^5.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -80,6 +81,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "2.7.2"
+    "typescript": "^2.7.2"
   }
 }
