--- a/package.json
+++ b/package.json
@@ -35,9 +35,10 @@
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-1.1.1.tgz",
-    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-1.1.1.tgz",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-1.3.0.tgz",
+    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-1.3.0.tgz",
     "body-parser": "^1.17.2",
+    "bootstrap": "^4.1.1",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
