Adds secure option

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --proxy-config ./proxy.json",
+    "start-secure": "ng serve -c secure --proxy-config ./proxy-secure.json --ssl --ssl-key key.pem --ssl-cert cert.pem",
     "start-redisdb": "redis-server ./server/database/redis.conf",
     "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
     "pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
     "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
     "start-redis-cli": "redis-cli -p 6379",
     "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
+    "start-server-secure": "./node_modules/.bin/ts-node ./server/server.ts --secure",
     "start-chat-server": "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
     "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build",
