Excludes only src directory from jest api tests

--- a/package.json
+++ b/package.json
@@ -108,8 +108,7 @@
     ],
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "<rootDir>/src/",
-      "<rootDir>/projects/"
+      "<rootDir>/src/"
     ]
   }
 }
