--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start-server-secure": "./node_modules/.bin/ts-node ./server/server.ts --secure",
     "start-chat-server": "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
     "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
-    "build": "ng build",
+    "build": "ng build --prod --aot",
     "test": "ng test --watch",
     "api-test": "jest",
     "lint": "ng lint",
