Adds build script for front end

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+/server/dist
 
 # dependencies
 /node_modules
@@ -46,9 +47,3 @@ server/keys
 
 # database files
 dump.rdb
-
-# for now ignore chat-server files
-chat-server
-
-# ignore chat files added for debug
-src/app/chat
