Updates jasmine types

--- a/package.json
+++ b/package.json
@@ -68,8 +68,8 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.11.1",
     "@types/frisby": "^2.0.1",
-    "@types/jasmine": "~2.5.53",
-    "@types/jasminewd2": "~2.0.2",
+    "@types/jasmine": "^2.8.8",
+    "@types/jasminewd2": "^2.0.2",
     "@types/jest": "^23.1.4",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/node": "^6.0.101",
