--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "start-redis-cli": "redis-cli -p 6379",
     "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
     "start-server-secure": "./node_modules/.bin/ts-node ./server/server.ts --secure",
-    "start-server-prod": "./node_modules/.bin/ts-node ./server/server.ts --secure --prod",
-    "start-chat-server": "./node_modules/.bin/ts-node ./chat-server/chat-server.ts",
+    "start-server-prod": "node server/dist/out-tsc/server.js --secure --prod",
+    "start-server-prod-ts-node": "./node_modules/.bin/ts-node ./server/server.ts --secure --prod",
     "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "build": "ng build --prod --aot",
     "test": "ng test --watch",
