--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
     "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
     "start-redis-cli": "redis-cli -p 6379",
-    "start-server": "./node_modules/.bin/ts-node ./server/server.ts",
-    "start-server-secure": "./node_modules/.bin/ts-node ./server/server.ts --secure",
+    "start-server": "node server/dist/out-tsc/server.js",
+    "start-server-ts-node": "./node_modules/.bin/ts-node ./server/server.ts",
+    "start-server-ts-node-secure": "./node_modules/.bin/ts-node ./server/server.ts --secure",
     "start-server-prod": "node server/dist/out-tsc/server.js --secure --prod",
     "start-server-prod-ts-node": "./node_modules/.bin/ts-node ./server/server.ts --secure --prod",
     "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
@@ -70,9 +71,8 @@
     "@types/frisby": "^2.0.1",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.2",
-    "@types/jest": "^23.1.4",
     "@types/jsonwebtoken": "^7.2.7",
-    "@types/node": "^6.0.101",
+    "@types/node": "^10.5.2",
     "@types/redis": "^2.8.5",
     "@types/ws": "^5.1.2",
     "codelyzer": "^4.1.0",
