--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,6 +7,7 @@
     {
       "type": "node",
       "request": "launch",
+      "preLaunchTask": "build-server",
       "name": "Server",
       "program": "${workspaceFolder}/server/dist/out-tsc/server.js",
       "sourceMaps": true,
