--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "ng": "ng",
     "start": "ng serve --proxy-config ./proxy.json",
     "start-secure": "ng serve -c secure --proxy-config ./proxy-secure.json --ssl --ssl-key key.pem --ssl-cert cert.pem",
-    "start-image-server": "./node_modules/.bin/ts-node ./server/image-server.ts",
-    "start-redisdb": "redis-server ./server/database/redis.conf",
     "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
-    "pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
-    "pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
-    "start-redis-cli": "redis-cli -p 6379",
-    "start-server": "node server/dist/out-tsc/server.js",
-    "start-server-prod": "node server/dist/out-tsc/server.js --secure --prod",
-    "server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
+    "pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
+    "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js",
+    "start-server-prod": "echo '*** Be sure you have built front end app and run server build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --secure --prod",
+    "start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "build": "ng build --prod --aot",
     "test": "ng test --watch",
     "api-test": "jest",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
+    "dep-start-image-server": "./node_modules/.bin/ts-node ./server/image-server.ts",
+    "dep-start-redisdb": "redis-server ./server/database/redis.conf",
+    "dep-pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
+    "dep-pre-load-app": "npm run pre-load-user-data && npm run pre-load-app-data",
+    "dep-redis-cli": "redis-cli -p 6379"
   },
   "private": true,
   "dependencies": {
