Adds doc cleanup

--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
     "pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js",
-    "start-server-prod": "echo '*** Be sure you have built front end app and run server build with ctrl-shift-b ***' && node dist/server.js --secure --prod",
     "start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "build": "ng build --prod --aot",
     "test": "ng test --watch",
@@ -17,6 +16,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
+    "dep-start-server-prod": "echo '*** Be sure you have built front end app and run server build with ctrl-shift-b ***' && node dist/server.js --secure --prod",
     "dep-start-image-server": "./node_modules/.bin/ts-node ./server/image-server.ts",
     "dep-start-redisdb": "redis-server ./server/database/redis.conf",
     "dep-pre-load-user-data": "ts-node ./server/database/pre-load-user-data.ts",
