Adds complete build script

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js",
     "start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
-    "build": "ng build --prod --aot",
+    "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
+    "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
     "api-test": "jest",
     "lint": "ng lint",
