--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@angular/language-service": "6.0.1",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
-    "@types/frisby": "^2.0.1",
+    "@types/form-data": "^2.2.1",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.2",
     "@types/jsonwebtoken": "^7.2.7",
