--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "api-test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "postinstall": "npm run build",
     "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "dep-start-server-prod": "echo '*** Be sure you have built front end app and run server build with ctrl-shift-b ***' && node dist/server.js --secure --prod",
     "dep-start-image-server": "./node_modules/.bin/ts-node ./server/image-server.ts",
@@ -28,8 +29,10 @@
   "dependencies": {
     "@angular/animations": "6.0.1",
     "@angular/cdk": "^6.0.1",
+    "@angular/cli": "6.0.1",
     "@angular/common": "6.0.1",
     "@angular/compiler": "6.0.1",
+    "@angular/compiler-cli": "6.0.1",
     "@angular/core": "6.0.1",
     "@angular/forms": "6.0.1",
     "@angular/http": "6.0.1",
@@ -48,6 +51,7 @@
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "express": "^4.16.3",
     "express-http-proxy": "^1.1.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
@@ -58,13 +62,12 @@
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^6.2.1",
+    "typescript": "^2.7.2",
     "ws": "^5.2.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/cli": "6.0.1",
-    "@angular/compiler-cli": "6.0.1",
     "@angular/language-service": "6.0.1",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
