--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:bldg25-chat-1.3.3.tgz",
+    "bldg25-chat": "^1.3.4",
     "bldg25-chat-server": "file:bldg25-chat-server-1.3.3.tgz",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.1",
