--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
     "start": "ng serve --proxy-config ./proxy.json",
     "start-secure": "ng serve -c secure --proxy-config ./proxy-secure.json --ssl --ssl-key key.pem --ssl-cert cert.pem",
     "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
-    "pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js",
-    "start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
     "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
@@ -17,6 +15,8 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm run build",
+    "dep-pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
+    "dep-start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
     "dep-start-server-prod": "echo '*** Be sure you have built front end app and run server build with ctrl-shift-b ***' && node dist/server.js --secure --prod",
     "dep-start-image-server": "./node_modules/.bin/ts-node ./server/image-server.ts",
@@ -41,11 +41,11 @@
     "@angular/platform-browser-dynamic": "6.0.1",
     "@angular/router": "6.0.1",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
-    "@robkatyat/bldg25-chat-server": "^1.3.4",
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "^1.3.4",
+    "bldg25-chat": "^1.3.5",
+    "bldg25-chat-server": "^1.3.5",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.1",
     "command-line-args": "^4.0.6",
