--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
+    "autolinker": "^1.6.2",
     "autoprefixer": "^7.2.6",
     "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-1.3.6.tgz",
     "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-1.3.6.tgz",
