--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.1",
-    "@angular/cdk": "^6.0.1",
-    "@angular/cli": "6.0.1",
-    "@angular/common": "6.0.1",
-    "@angular/compiler": "6.0.1",
-    "@angular/compiler-cli": "6.0.1",
-    "@angular/core": "6.0.1",
-    "@angular/forms": "6.0.1",
-    "@angular/http": "6.0.1",
-    "@angular/material": "^6.0.1",
-    "@angular/platform-browser": "6.0.1",
-    "@angular/platform-browser-dynamic": "6.0.1",
-    "@angular/router": "6.0.1",
+    "@angular/animations": "^6.0.9",
+    "@angular/cdk": "^6.4.0",
+    "@angular/cli": "^6.0.8",
+    "@angular/common": "^6.0.9",
+    "@angular/compiler": "^6.0.9",
+    "@angular/compiler-cli": "^6.0.9",
+    "@angular/core": "^6.0.9",
+    "@angular/forms": "^6.0.9",
+    "@angular/http": "^6.0.9",
+    "@angular/material": "^6.4.0",
+    "@angular/platform-browser": "^6.0.9",
+    "@angular/platform-browser-dynamic": "^6.0.9",
+    "@angular/router": "^6.0.9",
     "@ng-bootstrap/ng-bootstrap": "^1.0.0",
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
@@ -69,7 +69,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/language-service": "6.0.1",
+    "@angular/language-service": "^6.0.9",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/form-data": "^2.2.1",
@@ -91,9 +91,9 @@
     "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "nodemon": "^1.15.1",
+    "nodemon": "^1.18.3",
     "protractor": "~5.1.2",
-    "ts-jest": "^23.0.0",
+    "ts-jest": "^23.0.1",
     "ts-node": "^7.0.0",
     "tslint": "~5.7.0"
   },
