--- a/package.json
+++ b/package.json
@@ -44,8 +44,8 @@
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.6.2",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-1.3.6.tgz",
-    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-1.3.6.tgz",
+    "bldg25-chat": "^1.3.6",
+    "bldg25-chat-server": "^1.3.6",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.1",
     "command-line-args": "^4.0.6",
