--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "ng serve --proxy-config ./proxy.json",
     "start-secure": "ng serve -c secure --proxy-config ./proxy-secure.json --ssl --ssl-key key.pem --ssl-cert cert.pem",
     "pre-load-app-data": "ts-node ./server/database/pre-load-app-data.ts",
-    "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js",
+    "start-server": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node dist/server.js",
     "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
     "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
