Uses jasmine instead of jest for api test

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
     "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
-    "api-test": "jest",
+    "api-test": "ts-node node_modules/jasmine/bin/jasmine  server/__test__/*",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm run build",
@@ -82,7 +82,6 @@
     "frisby": "^2.0.16",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
-    "jest": "^23.3.0",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
