Improves api test output

--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
     "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
-    "api-test": "ts-node node_modules/jasmine/bin/jasmine  server/__test__/*",
+    "api-test": "jasmine-ts server/__test__/* --config=server/__test__/jasmine.json",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm run build",
+    "dep-api-test": "ts-node node_modules/jasmine/bin/jasmine  server/__test__/*",
     "dep-pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "dep-start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
@@ -82,6 +83,7 @@
     "frisby": "^2.0.16",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-ts": "^0.2.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
