--- a/package.json
+++ b/package.json
@@ -76,11 +76,11 @@
     "@types/jasminewd2": "^2.0.2",
     "@types/jsonwebtoken": "^7.2.7",
     "@types/node": "^10.5.2",
+    "@types/node-fetch": "^2.1.2",
     "@types/redis": "^2.8.5",
     "@types/ws": "^5.1.2",
     "codelyzer": "^4.1.0",
     "concurrently": "^3.5.1",
-    "frisby": "^2.0.16",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "jasmine-ts": "^0.2.1",
@@ -90,6 +90,7 @@
     "karma-coverage-istanbul-reporter": "^1.4.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
     "protractor": "~5.1.2",
     "ts-node": "^7.0.0",
