--- a/package.json
+++ b/package.json
@@ -28,19 +28,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.9",
+    "@angular/animations": "^6.1.0",
     "@angular/cdk": "^6.4.1",
-    "@angular/cli": "^6.0.8",
-    "@angular/common": "^6.0.9",
-    "@angular/compiler": "^6.0.9",
-    "@angular/compiler-cli": "^6.0.9",
-    "@angular/core": "^6.0.9",
-    "@angular/forms": "^6.0.9",
-    "@angular/http": "^6.0.9",
+    "@angular/cli": "^6.1.1",
+    "@angular/common": "^6.1.0",
+    "@angular/compiler": "^6.1.0",
+    "@angular/compiler-cli": "^6.1.0",
+    "@angular/core": "^6.1.0",
+    "@angular/forms": "^6.1.0",
+    "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.1",
-    "@angular/platform-browser": "^6.0.9",
-    "@angular/platform-browser-dynamic": "^6.0.9",
-    "@angular/router": "^6.0.9",
+    "@angular/platform-browser": "^6.1.0",
+    "@angular/platform-browser-dynamic": "^6.1.0",
+    "@angular/router": "^6.1.0",
     "argon2": "^0.16.1",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.0",
@@ -48,7 +48,7 @@
     "bldg25-chat": "^1.3.7",
     "bldg25-chat-server": "^1.3.7",
     "body-parser": "^1.17.2",
-    "bootstrap": "^4.1.1",
+    "bootstrap": "^4.1.3",
     "command-line-args": "^4.0.6",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
@@ -63,38 +63,38 @@
     "redis": "^2.8.0",
     "rxjs": "^6.2.1",
     "typescript": "2.7.2",
-    "ws": "^5.2.1",
+    "ws": "^6.0.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.6.1",
-    "@angular/language-service": "^6.0.9",
+    "@angular/language-service": "^6.1.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/form-data": "^2.2.1",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "^2.0.2",
     "@types/jsonwebtoken": "^7.2.7",
-    "@types/node": "^10.5.2",
+    "@types/node": "^10.5.4",
     "@types/node-fetch": "^2.1.2",
     "@types/redis": "^2.8.5",
     "@types/ws": "^5.1.2",
     "codelyzer": "^4.1.0",
-    "concurrently": "^3.5.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "concurrently": "^3.6.1",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
     "jasmine-ts": "^0.2.1",
-    "karma": "~1.7.0",
-    "karma-chrome-launcher": "~2.1.1",
+    "karma": "^2.0.5",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.4.1",
+    "karma-coverage-istanbul-reporter": "^2.0.1",
     "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma-jasmine-html-reporter": "^1.2.0",
     "node-fetch": "^2.2.0",
     "nodemon": "^1.18.3",
-    "protractor": "~5.1.2",
+    "protractor": "^5.4.0",
     "ts-node": "^7.0.0",
-    "tslint": "~5.7.0"
+    "tslint": "^5.11.0"
   },
   "engines": {
     "node": "10.4.0",
