--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.0",
     "autoprefixer": "^7.2.6",
-    "bldg25-chat": "^1.3.7",
-    "bldg25-chat-server": "^1.3.7",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.0.0.tgz",
+    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.0.0.tgz",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.3",
     "command-line-args": "^4.0.6",
