--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.1",
+    "@angular-devkit/build-angular": "^0.7.3",
     "@angular/language-service": "^6.1.2",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
