--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^6.1.3",
     "@angular/platform-browser-dynamic": "^6.1.3",
     "@angular/router": "^6.1.3",
+    "@types/mongodb": "^3.1.4",
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.1",
@@ -57,6 +58,7 @@
     "hammerjs": "^2.0.8",
     "jsonwebtoken": "^8.3.0",
     "moment": "^2.18.1",
+    "mongodb": "^3.1.4",
     "ng2-validation": "^4.2.0",
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
