Server compile errors fixed

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,16 @@
       "sourceMaps": true,
       "cwd": "${workspaceFolder}",
       "protocol": "inspector"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch current file w/ ts-node",
+      "protocol": "inspector",
+      "args": ["${relativeFile}"],
+      "cwd": "${workspaceRoot}",
+      "runtimeArgs": ["-r", "ts-node/register"],
+      "internalConsoleOptions": "openOnSessionStart"
     }
   ]
 }
