--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "identifier": "build-server",
+      "label": "build-server",
       "type": "typescript",
       "tsconfig": "server/tsconfig.json",
       "problemMatcher": ["$tsc"],
