--- a/package.json
+++ b/package.json
@@ -77,12 +77,13 @@
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/jsonwebtoken": "^7.2.7",
-    "@types/node": "^10.11.7",
+    "@types/node": "^10.12.0",
     "@types/node-fetch": "^2.1.2",
     "@types/redis": "^2.8.7",
     "@types/ws": "^6.0.1",
     "codelyzer": "^4.5.0",
     "concurrently": "^4.0.1",
+    "jasmine": "^3.2.0",
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
     "jasmine-ts": "^0.2.1",
