--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@angular/animations": "^6.1.10",
     "@angular/cdk": "^6.4.7",
-    "@angular/cli": "^6.2.5",
+    "@angular/cli": "^6.2.6",
     "@angular/common": "^6.1.10",
     "@angular/compiler": "^6.1.10",
     "@angular/compiler-cli": "^6.1.10",
@@ -64,12 +64,12 @@
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^6.3.3",
-    "typescript": "2.7.2",
+    "typescript": "^2.9.2",
     "ws": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.5",
+    "@angular-devkit/build-angular": "^0.8.6",
     "@angular/language-service": "^6.1.10",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
@@ -87,7 +87,7 @@
     "jasmine-core": "^3.2.1",
     "jasmine-spec-reporter": "^4.2.1",
     "jasmine-ts": "^0.2.1",
-    "karma": "^3.0.0",
+    "karma": "^3.1.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "^2.0.4",
