--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "build-server": "./node_modules/.bin/tsc -p ./server/tsconfig.json",
     "build": "ng build --prod --aot && npm run build-server",
     "test": "ng test --watch",
-    "api-test": "jasmine-ts server/__test__/* --config=server/__test__/jasmine.json",
-    "api-test-single": "jasmine-ts server/__test__/login* --config=server/__test__/jasmine.json",
+    "api-test": "tsc -p spec/tsconfig.json; node ./node_modules/jasmine/bin/jasmine.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "npm run build",
-    "dep-api-test": "ts-node node_modules/jasmine/bin/jasmine  server/__test__/*",
+    "dep-api-test": "jasmine-ts server/__test__/* --config=server/__test__/jasmine.json",
+    "dep-api-test-single": "jasmine-ts server/__test__/login* --config=server/__test__/jasmine.json",
     "dep-pre-load-app-data-local": "ts-node ./server/database/pre-load-app-data.ts --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "dep-start-server-local": "echo '*** Be sure you have run build with ctrl-shift-b ***' && node server/dist/out-tsc/server.js --dbHost localhost --dbPort 6379 --dbAuth this_should_be_a_secret_authcode",
     "dep-server": "./node_modules/.bin/nodemon  -w ./server --ext \".ts\" --exec \"npm run start-server\"",
@@ -29,25 +29,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.10",
-    "@angular/cdk": "^6.4.7",
-    "@angular/cli": "^6.2.6",
-    "@angular/common": "^6.1.10",
-    "@angular/compiler": "^6.1.10",
-    "@angular/compiler-cli": "^6.1.10",
-    "@angular/core": "^6.1.10",
-    "@angular/forms": "^6.1.10",
-    "@angular/http": "^6.1.10",
+    "@angular/animations": "^7.0.2",
+    "@angular/cdk": "^7.0.2",
+    "@angular/cli": "^7.0.2",
+    "@angular/common": "^7.0.2",
+    "@angular/compiler": "^7.0.2",
+    "@angular/compiler-cli": "^7.0.2",
+    "@angular/core": "^7.0.2",
+    "@angular/forms": "^7.0.2",
+    "@angular/http": "^7.0.2",
     "@angular/material": "^6.4.7",
-    "@angular/platform-browser": "^6.1.10",
-    "@angular/platform-browser-dynamic": "^6.1.10",
-    "@angular/router": "^6.1.10",
+    "@angular/platform-browser": "^7.0.2",
+    "@angular/platform-browser-dynamic": "^7.0.2",
+    "@angular/router": "^7.0.2",
     "@types/mongodb": "^3.1.12",
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.1",
-    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.2.5.tgz",
-    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.2.5.tgz",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.2.6.tgz",
+    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.2.6.tgz",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.3",
     "command-line-args": "^5.0.2",
@@ -64,13 +64,13 @@
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^6.3.3",
-    "typescript": "^2.9.2",
+    "typescript": "^3.1.6",
     "ws": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.8.6",
-    "@angular/language-service": "^6.1.10",
+    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular/language-service": "^7.0.2",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/form-data": "^2.2.1",
