--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -12,6 +12,16 @@
         "kind": "build",
         "isDefault": true
       }
+    },
+    {
+      "label": "build-tests",
+      "type": "typescript",
+      "tsconfig": "spec/tsconfig.json",
+      "problemMatcher": ["$tsc"],
+      "group": {
+        "kind": "test",
+        "isDefault": true
+      }
     }
   ]
 }
