--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "@angular/platform-browser": "^7.0.2",
     "@angular/platform-browser-dynamic": "^7.0.2",
     "@angular/router": "^7.0.2",
-    "@types/mongodb": "^3.1.14",
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.1",
@@ -71,12 +70,14 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.10.4",
     "@angular/language-service": "^7.0.2",
+    "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/form-data": "^2.2.1",
     "@types/jasmine": "^2.8.9",
     "@types/jasminewd2": "^2.0.5",
     "@types/jsonwebtoken": "^8.3.0",
+    "@types/mongodb": "^3.1.14",
     "@types/node": "^10.12.2",
     "@types/node-fetch": "^2.1.2",
     "@types/redis": "^2.8.7",
