Prepares env vars for Heroku and tests them in debugger

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,14 @@
       "program": "${workspaceFolder}/dist/server.js",
       "sourceMaps": true,
       "cwd": "${workspaceFolder}",
-      "protocol": "inspector"
+      "protocol": "inspector",
+      "args": ["--useRedisCategories"],
+      "env": {
+        "REDIS_DB_HOST": "catfish.redistogo.com",
+        "REDIS_DB_PORT": "9782",
+        "REDIS_DB_NUM": "0",
+        "REDIS_DB_AUTHCODE": "63cf95b9b1a52f2fe6d0a9c5a67fa527"
+      }
     },
     {
       "type": "node",
