--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,7 @@
       "cwd": "${workspaceFolder}",
       "protocol": "inspector",
       "args": ["--useRedisCategories"],
-      "envFile": "${workspaceFolder}/server/keys/app-env.sh"
+      "envFile": "${workspaceFolder}/server/keys/env-dev.sh"
     },
     {
       "type": "node",
