--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "dependencies": {
     "@angular/animations": "^7.0.3",
     "@angular/cdk": "^7.0.3",
-    "@angular/cli": "^7.0.2",
+    "@angular/cli": "^7.0.5",
     "@angular/common": "^7.0.3",
     "@angular/compiler": "^7.0.3",
     "@angular/compiler-cli": "^7.0.3",
@@ -45,8 +45,8 @@
     "argon2": "^0.19.3",
     "argon2-ffi": "^1.1.0",
     "autolinker": "^1.7.1",
-    "bldg25-chat": "^2.3.0",
-    "bldg25-chat-server": "^2.3.0",
+    "bldg25-chat": "file:../bldg25-chat-dev/bldg25-chat-2.3.1.tgz",
+    "bldg25-chat-server": "file:../bldg25-chat-dev/bldg25-chat-server-2.3.1.tgz",
     "body-parser": "^1.17.2",
     "bootstrap": "^4.1.3",
     "command-line-args": "^5.0.2",
@@ -68,7 +68,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.10.4",
+    "@angular-devkit/build-angular": "^0.10.5",
     "@angular/language-service": "^7.0.3",
     "@types/command-line-args": "^5.0.0",
     "@types/cookie-parser": "^1.4.1",
@@ -78,7 +78,7 @@
     "@types/jasminewd2": "^2.0.6",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongodb": "^3.1.14",
-    "@types/node": "^10.12.3",
+    "@types/node": "^10.12.4",
     "@types/node-fetch": "^2.1.2",
     "@types/redis": "^2.8.7",
     "@types/ws": "^6.0.1",
