--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@types/ws": "^6.0.1",
     "codelyzer": "^4.5.0",
     "concurrently": "^4.0.1",
+    "coveralls": "^3.0.2",
     "jasmine": "^3.3.0",
     "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
