--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "password-validator": "^4.0.0",
     "redis": "^2.8.0",
     "rxjs": "^6.3.3",
-    "typescript": "^3.1.6",
+    "typescript": "~3.1.6",
     "ws": "^6.1.2",
     "zone.js": "^0.8.26"
   },
